<resources>


    <string name="app_name">Appan Tv</string>


    <string name="ad_app_id">ca-app-pub-4142525948953301~8653637994</string>

    <!--Test Banner Ad Unit Id-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <!-- Appan Tv Banner AD Unit Id-->
    <string name="banner_ad_unit_id">ca-app-pub-4142525948953301/8169464400</string>


    <!--Test Interstitial Ad Unit Id-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->

    <!-- Appan Tv Interstitial AD Unit Id-->
    <string name="interstitial_ad_unit_id">ca-app-pub-4142525948953301/5128368099</string>


    <string name="app_link">https://play.google.com/store/apps/details?id=com.orangicsmarttechnology.appantv</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>


    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_videos">Videos</string>

    <string name="sub_menu_name">Communicate</string>

    <string name="menu_contactus">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_update">Updates</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>

    <string name="videos_title">Videos</string>
    <string name="about_title">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
