<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_videos" />
    </group>

    <item android:title="@string/sub_menu_name">
        <menu>
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_contact"
                android:title="@string/menu_contactus" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_system_update_alt_black_18dp"
                android:title="@string/menu_update" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
